--- a/v7/index.html
+++ b/v7/index.html
@@ -33,11 +33,17 @@
     Pot à Mèche
   </div>
 
-  <div class="top-right">
-    <div>B. Barrois</div>
-    <div id="version">version</div>
+<div class="top-right">
+  <div class="author">B. Barrois</div>
+
+  <div class="top-right-sub">
+    <button id="btnMail" title="Contact">
+      ✉️
+    </button>
+    <span id="version">v. : x.x</span>
   </div>
-</header>
+</div>
+
 
 <!-- ==========================
      ACTIONS HAUT DE PAGE
