--- a/v7/index.html
+++ b/v7/index.html
@@ -37,12 +37,10 @@
   <div class="author">B. Barrois</div>
 
   <div class="top-right-sub">
-    <button id="btnMail" title="Contact">✉️</button>
+    <button id="btnMail" title="Contact" type="button">✉️</button>
     <span id="version">v. : x.x</span>
   </div>
 </div>
-
-
 
 <!-- ==========================
      ACTIONS HAUT DE PAGE
