--- a/v7/index.html
+++ b/v7/index.html
@@ -41,6 +41,8 @@
     <span id="version">v. : x.x</span>
   </div>
 </div>
+</header>   <!-- ✅ FERMETURE MANQUANTE -->
+
 
 <!-- ==========================
      ACTIONS HAUT DE PAGE
