--- a/Peter/index.html
+++ b/Peter/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+  <div class="background-icon"></div>
+
   <h1>Balance connectée</h1>
 
   <button id="connect">🔗 Connexion BLE</button>
@@ -19,4 +22,4 @@
 
   <script src="app.js"></script>
 </body>
-</html>
+
