--- a/v8/index.html
+++ b/v8/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>4 Chronos pour Pot à Mèche</title>
+  <title>Chrono Frelon</title>
 
   <!-- PWA -->
   <link rel="manifest" href="./manifest.json">
@@ -25,32 +25,38 @@
 <header class="topbar">
   <div class="top-left">
     <img src="./icon_4_chrono_2.png" class="top-logo" alt="logo">
-    <!-- HELP : appel unique -->
-    <button onclick="openHelpPopup()">❓ Aide</button>
+
+    <!-- HELP -->
+    <button onclick="openHelpPopup()" data-i18n="help">Aide</button>
   </div>
 
-  <div class="top-title">
+  <div class="top-title" data-i18n="app_title">
     Pot à Mèche
   </div>
 
-<div class="top-right">
-  <div class="author">B. Barrois</div>
+  <div class="top-right">
+    <div class="author">B. Barrois</div>
 
-  <div class="top-right-sub">
-    <button id="btnMail" title="Contact" type="button">✉️</button>
-    <span id="version">v. : x.x</span>
+    <div class="top-right-sub">
+      <button id="btnMail" title="Contact" type="button">✉️</button>
+      <span id="version">v. : x.x</span>
+    </div>
   </div>
-</div>
-</header>   <!-- ✅ FERMETURE MANQUANTE -->
-
+</header>
 
 <!-- ==========================
      ACTIONS HAUT DE PAGE
 ========================== -->
 <div class="top-actions">
-  <button id="btnCapt" class="btn-capt">Capture d’écran</button>
+  <button id="btnCapt" class="btn-capt" data-i18n="capture">
+    Capture d’écran
+  </button>
+
   <div id="dateTime" class="date-time"></div>
-  <button id="btnLoc" class="btn-loc">Localisation du nid</button>
+
+  <button id="btnLoc" class="btn-loc" data-i18n="nest_location">
+    Localisation du nid
+  </button>
 </div>
 
 <!-- ==========================
@@ -85,79 +91,4 @@ document.addEventListener("DOMContentLoaded", () => {
     const now = new Date();
     el.textContent =
       now.toLocaleDateString("fr-FR") + " " +
-      now.toLocaleTimeString("fr-FR", {
-        hour: "2-digit",
-        minute: "2-digit",
-        second: "2-digit"
-      });
-  }
-
-  updateDateTime();
-  setInterval(updateDateTime, 1000);
-});
-</script>
-
-<!-- ==========================
-     CAPTURE D'ÉCRAN
-========================== -->
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const btn = document.getElementById("btnCapt");
-  if (!btn) return;
-
-  btn.addEventListener("click", async () => {
-    const canvas = await html2canvas(document.body, {
-      scale: 2,
-      useCORS: true
-    });
-
-    const blob = await new Promise(resolve =>
-      canvas.toBlob(resolve, "image/png")
-    );
-
-    const filename =
-      "Chrono_Frelon_" +
-      new Date().toISOString().replace(/[:.]/g, "-") +
-      ".png";
-
-    if (navigator.share) {
-      try {
-        const file = new File([blob], filename, { type: "image/png" });
-        await navigator.share({
-          files: [file],
-          title: "Chrono Frelon"
-        });
-        return;
-      } catch (e) {}
-    }
-
-    const a = document.createElement("a");
-    a.href = URL.createObjectURL(blob);
-    a.download = filename;
-    a.click();
-  });
-});
-</script>
-
-<!-- ==========================
-     APP PRINCIPALE
-========================== -->
-<script src="./app.js"></script>
-
-<!-- ==========================
-     HELP (UI)
-========================== -->
-<script src="./js/help.js"></script>
-
-<!-- ==========================
-     SERVICE WORKER
-========================== -->
-<script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("./service-worker.js");
-}
-</script>
-
-</body>
-</html>
+      now.toLocaleTimeSt
