--- a/v8/index.html
+++ b/v8/index.html
@@ -91,4 +91,84 @@ document.addEventListener("DOMContentLoaded", () => {
     const now = new Date();
     el.textContent =
       now.toLocaleDateString("fr-FR") + " " +
-      now.toLocaleTimeSt
+      now.toLocaleTimeString("fr-FR", {
+        hour: "2-digit",
+        minute: "2-digit",
+        second: "2-digit"
+      });
+  }
+
+  updateDateTime();
+  setInterval(updateDateTime, 1000);
+});
+</script>
+
+<!-- ==========================
+     I18N (⚠️ AVANT app.js & help.js)
+========================== -->
+<script src="./js/i18n.js"></script>
+
+<!-- ==========================
+     CAPTURE D'ÉCRAN
+========================== -->
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const btn = document.getElementById("btnCapt");
+  if (!btn) return;
+
+  btn.addEventListener("click", async () => {
+    const canvas = await html2canvas(document.body, {
+      scale: 2,
+      useCORS: true
+    });
+
+    const blob = await new Promise(resolve =>
+      canvas.toBlob(resolve, "image/png")
+    );
+
+    const filename =
+      "Chrono_Frelon_" +
+      new Date().toISOString().replace(/[:.]/g, "-") +
+      ".png";
+
+    if (navigator.share) {
+      try {
+        const file = new File([blob], filename, { type: "image/png" });
+        await navigator.share({
+          files: [file],
+          title: "Chrono Frelon"
+        });
+        return;
+      } catch (e) {}
+    }
+
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = filename;
+    a.click();
+  });
+});
+</script>
+
+<!-- ==========================
+     APP PRINCIPALE
+========================== -->
+<script src="./app.js"></script>
+
+<!-- ==========================
+     HELP (UI)
+========================== -->
+<script src="./js/help.js"></script>
+
+<!-- ==========================
+     SERVICE WORKER
+========================== -->
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("./service-worker.js");
+}
+</script>
+
+</body>
+</html>
