--- a/v8/index.html
+++ b/v8/index.html
@@ -65,10 +65,10 @@
 </div>
 <!-- Sélecteur de langue centré -->
 <div class="lang-bar">
-  <button data-lang="fr">🇫🇷 FR</button>
-  <button data-lang="en">🇬🇧 EN</button>
-  <button data-lang="de">🇩🇪 DE</button>
-  <button data-lang="it">🇮🇹 IT</button>
+  <button data-lang="fr">🇫🇷</button>
+  <button data-lang="en">🇬🇧</button>
+  <button data-lang="de">🇩🇪</button>
+  <button data-lang="it">🇮🇹</button>
 </div>
 <!-- ==========================
      CONTENEUR DES CHRONOS
