--- a/v8/index.html
+++ b/v8/index.html
@@ -116,9 +116,9 @@ document.addEventListener("DOMContentLoaded", () => {
 <!-- Sélecteur de langue -->
 
 <!-- ==========================
-     I18N (⚠️ AVANT app.js & help.js)
+     I18N (⚠️ AVANT app.js & help.js)    attention ici v8 !!!!
 ========================== -->
-<script src="./js/i18n.js"></script>
+<script src="./v8/js/i18n.js"></script>
 
 <!-- ==========================
      CAPTURE D'ÉCRAN
@@ -169,9 +169,9 @@ document.addEventListener("DOMContentLoaded", () => {
 <script src="./app.js"></script>
 
 <!-- ==========================
-     HELP (UI)
+     HELP (UI)      
 ========================== -->
-<script src="./js/help.js"></script>
+<script src="./v8/js/help.js"></script>
 
 <!-- ==========================
      SERVICE WORKER
