--- a/v8/index.html
+++ b/v8/index.html
@@ -116,9 +116,9 @@ document.addEventListener("DOMContentLoaded", () => {
 <!-- Sélecteur de langue -->
 
 <!-- ==========================
-     I18N (⚠️ AVANT app.js & help.js)    attention ici v8 !!!!
+     I18N (⚠️ AVANT app.js & help.js)    
 ========================== -->
-<script src="./v8/js/i18n.js"></script>
+<script src="./js/i18n.js"></script>
 
 <!-- ==========================
      CAPTURE D'ÉCRAN
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <!-- ==========================
      HELP (UI)      
 ========================== -->
-<script src="./v8/js/help.js"></script>
+<script src="./js/help.js"></script>
 
 <!-- ==========================
      SERVICE WORKER
