--- a/v8/index.html
+++ b/v8/index.html
@@ -162,6 +162,12 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
+<!-- ==========================
+     APP de la base SUPABASE
+========================== -->  
+
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script src="app.js"></script>
 
 <!-- ==========================
      APP PRINCIPALE
@@ -182,5 +188,7 @@ if ("serviceWorker" in navigator) {
 }
 </script>
 
+
+  
 </body>
 </html>
