--- a/v8/map.html
+++ b/v8/map.html
@@ -70,6 +70,11 @@
 
 <!-- MAP -->
 <script src="./map.js"></script>
+<!-- carte partagée -->
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script src="app.js"></script>
+<script src="map.js"></script>
+
 
 </body>
 </html>
