--- a/v8/index.html
+++ b/v8/index.html
@@ -167,7 +167,7 @@ document.addEventListener("DOMContentLoaded", () => {
 ========================== -->  
 
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-<script src="app.js"></script>
+<script src="./js/supabase.js"></script>
 
 <!-- ==========================
      APP PRINCIPALE
