--- a/v8/map.html
+++ b/v8/map.html
@@ -72,8 +72,10 @@
 <script src="./map.js"></script>
 <!-- carte partagée -->
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-<script src="app.js"></script>
-<script src="map.js"></script>
+<script src="./js/supabase.js"></script>
+<script src="./app.js"></script>
+<script src="./map.js"></script>
+
 
 
 </body>
