--- a/v8/index.html
+++ b/v8/index.html
@@ -69,6 +69,9 @@
   <button data-lang="en">🇬🇧</button>
   <button data-lang="de">🇩🇪</button>
   <button data-lang="it">🇮🇹</button>
+  <button data-lang="als" class="flag-als">
+    <img src="img/flag-alsace.svg" alt="Alsacien">
+  </button>
 </div>
 <!-- ==========================
      CONTENEUR DES CHRONOS
