--- a/v8/index.html
+++ b/v8/index.html
@@ -70,7 +70,7 @@
   <button data-lang="de">🇩🇪</button>
   <button data-lang="it">🇮🇹</button>
   <button data-lang="als" class="flag-als">
-    <img src="img/flag-alsace.svg" alt="Alsacien">
+    <img src="i18n/Alsace_flag.png" alt="Alsacien">
   </button>
 </div>
 <!-- ==========================
