--- a/v8/index.html
+++ b/v8/index.html
@@ -69,10 +69,26 @@
   <button data-lang="en">🇬🇧</button>
   <button data-lang="de">🇩🇪</button>
   <button data-lang="it">🇮🇹</button>
-  <button data-lang="als" class="flag-als">
+
+  <!-- Espagnol -->
+  <button data-lang="es">🇪🇸</button>
+
+  <!-- Alsacien -->
+  <button data-lang="als">
     <img src="i18n/Alsace_flag.png" alt="Alsacien">
   </button>
+
+  <!-- Breton -->
+  <button data-lang="bz">
+    <img src="i18n/Bz_flag.jpg" alt="Brezhoneg">
+  </button>
+
+  <!-- Occitan -->
+  <button data-lang="oc">
+    <img src="i18n/Oc_flag.jpg" alt="Occitan">
+  </button>
 </div>
+
 <!-- ==========================
      CONTENEUR DES CHRONOS
 ========================== -->
