--- a/v8/index.html
+++ b/v8/index.html
@@ -69,10 +69,8 @@
   <button data-lang="en">🇬🇧</button>
   <button data-lang="de">🇩🇪</button>
   <button data-lang="it">🇮🇹</button>
-
-  <!-- Espagnol -->
   <button data-lang="es">🇪🇸</button>
-
+  <button data-lang="nl">🇳🇱</button>
   <!-- Alsacien -->
   <button data-lang="als">
     <img src="i18n/Alsace_flag.png" alt="Alsacien">
@@ -86,6 +84,10 @@
   <!-- Occitan -->
   <button data-lang="oc">
     <img src="i18n/Oc_flag.jpg" alt="Occitan">
+  </button>
+    <!-- Basque (ik) -->
+  <button data-lang="ik">
+    <img src="i18n/ik_flag.jpg" alt="Basque">
   </button>
 </div>
 
