--- a/v8/index.html
+++ b/v8/index.html
@@ -87,7 +87,7 @@
   </button>
     <!-- Basque (ik) -->
   <button data-lang="ik">
-    <img src="i18n/ik_flag.jpg" alt="Basque">
+    <img src="i18n/Ik_flag.jpg" alt="Basque">
   </button>
 </div>
 
