--- a/v4/map.html
+++ b/v4/map.html
@@ -68,14 +68,15 @@
 <!-- I18N -->
 <script src="./js/i18n.js"></script>
 
-<!-- MAP -->
-<script src="./map.js"></script>
-<!-- carte partagée -->
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-<script src="./js/supabase.js"></script>
-<script src="./app.js"></script>
+<!-- Leaflet / carte -->
 <script src="./map.js"></script>
 
+<!-- Supabase -->
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script src="./js/supabase.js"></script>
+
+<!-- App principale -->
+<script src="./app.js"></script>
 
 
 </body>
