--- a/v4/map.html
+++ b/v4/map.html
@@ -49,7 +49,7 @@
 
 <body>
 
-<button id="btnBackMap" title="Retour">
+<button id="btnBackMap">
   ⬅ <span data-i18n="back">Retour</span>
 </button>
 
@@ -68,16 +68,12 @@
 <!-- I18N -->
 <script src="./js/i18n.js"></script>
 
-<!-- Leaflet / carte -->
-<script src="./map.js"></script>
-
 <!-- Supabase -->
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 <script src="./js/supabase.js"></script>
 
-<!-- App principale -->
-<script src="./app.js"></script>
-
+<!-- Carte UNIQUEMENT -->
+<script src="./map.js"></script>
 
 </body>
 </html>
