--- a/v8/index.html
+++ b/v8/index.html
@@ -30,9 +30,14 @@
     <button onclick="openHelpPopup()" data-i18n="help">Aide</button>
   </div>
 
-  <div class="top-title" data-i18n="app_title">
-    Pot à Mèche
-  </div>
+<div class="top-title" data-i18n="app_title">
+  Pot à Mèche
+</div>
+
+<div class="top-subtitle" data-i18n="app_subtitle">
+  Chronos + Direction
+</div>
+
 
   <div class="top-right">
     <div class="author">B. Barrois</div>
