--- a/v8/index.html
+++ b/v8/index.html
@@ -30,19 +30,15 @@
     <button onclick="openHelpPopup()" data-i18n="help">Aide</button>
   </div>
 
-  <div class="topbar">
+   <div class="topbar">
   
     <div class="top-left">
       …
     </div>
   
     <div class="top-center">
-      <div class="top-title" data-i18n="app_title">
-        Pot à mèche
-      </div>
-      <div class="top-subtitle" data-i18n="app_subtitle">
-        Chronos + Direction
-      </div>
+      <div class="top-title" data-i18n="app_title">Pot à mèche</div>
+      <div class="top-subtitle" data-i18n="app_subtitle">Chronos + Direction</div>
     </div>
   
     <div class="top-right">
@@ -50,7 +46,6 @@
     </div>
   
   </div>
-
 
   <div class="top-right">
     <div class="author">B. Barrois</div>
